--- a/sailpoint-vaadin-plugin/src/main/resources/ui/page.xhtml
+++ b/sailpoint-vaadin-plugin/src/main/resources/ui/page.xhtml
@@ -1,15 +1,13 @@
 ﻿<!DOCTYPE html PUBLIC
-    "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+        "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- (c) Copyright 2015 SailPoint Technologies, Inc., All Rights Reserved. -->
-
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:sp="http://sailpoint.com/ui"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
-	<body>
-		<H1> TEST FULL PAGE </H1>
-	</body>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<body>
+<div>
+    <script src="/identityiq/sp-vaadin/VAADIN/build/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="/identityiq/sp-vaadin/web-component/sp-vaadin-plugin.js"></script>
+    <sp-vaadin-plugin style="width: 100%; height: 100%"></sp-vaadin-plugin>
+</div>
+</body>
 </html>
